test/sematic/resources/negative/false_record2.tig
let
    type rec = {hi: int; lo: int}
    var rec := rec {hi=1, lo=2}
in
    rec.a
end